--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^2.0.1",
     "mysql": "^2.10.2",
+    "mysql2": "^1.6.4",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
